# uni-finder-bot

./: README.md  README_RENDER.md  config.py  crawl_max.yml.yml  llm.py  local_db.py  main.py  pyproject.toml  render.yaml  requirements.txt  universities.json  web_search.py
.github/workflows/: build-programs-full.yml  build-programs-latest.yml  crawl-programs.yml  crawl_max.yml.yml  crawl_programs.yml  data-pipeline.yml  full-data-build.yml  update-data.yml
app/: assistant_fallback.py  cse.py  models.py  scraping.py
bot_patch_latest/: README.md  handlers.search.py.patch  services.offline_data.py.patch
data/: programs.json  universities.json
docs/: README_all_unis_provider.md
handlers/: basic.py  search.py  uni.py
parsing/: filters.py
public/data/: latest.csv  latest.json  programs_latest_clean.csv  sample.json
scraper_latest/: README.md  build_dataset.py
scraper_latest/providers/: all_unis.py  interfax.py  raex.py
scraper_latest/scripts/: crawl_official_latest.py  normalize_latest.py
scraper_max/core/: crawler.py  extract.py  util.py
scraper_max/scripts/: build_universities.py  crawl_all.py  csv_to_universities_json_ci.py
scrapers/: postupi_scraper.py
scripts/: build_dataset.py  validate_dataset.py
scripts/schemas/: programs.schema.json  (+1 more)
search/: aggregator.py  gcs.py  scraper_postupi.py
services/: offline_data.py  search.py
tools/: README.md  convert_universities_csv_to_json.py  normalize_unis.py  peek_data.py  scrape_edu_ru.py
utils/: filters.py  normalize.py  openai_helper.py  parsers.py  text.py
workflows/: build-programs.yml
(+1 files in other folders)
