[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uni-finder-bot"
version = "0.1.0"
description = "Telegram bot for university finder"
requires-python = "==3.11.*"

dependencies = [
    "aiogram==3.4.1",
    "openai==0.28",
    "requests==2.32.3",
    "certifi==2024.7.4",
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.5.3",
]
